@@ -4,6 +4,9 @@
 	"const char **inbuf" -> "char **inbuf"
 	(Issue 8)
 
+	* win_iconv.c: Change to not use TEXT macro for GetProcAddress.
+	(Issue 17) (Thanks to EPienkowskia)
+
 2011-10-28  Yukihiro Nakadaira
 
 	* win_iconv.c: Add UCS-2.
